--- a/.github/workflows/automerge_cata_classic.yml
+++ b/.github/workflows/automerge_cata_classic.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Merge with master
+    - name: Merge with cata_classic
       run: |
         git clone ${{env.MY_REPO}} -b ${{env.MY_BRANCH}} tmp
         cd tmp
